--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -16,9 +16,10 @@
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>08:30</td>  <td>Continental Breakfast</td> </tr>
+      <tr> <td>09:00</td>  <td>Web scraping with Python</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>More TBD</td> </tr>
+      <tr> <td>13:00</td>  <td>Follow-up OR Version Control with Git/GitKraken</td> </tr>
       <tr> <td>14:30</td>  <td>Coffee</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
