--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -24,6 +24,39 @@
       <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Reference...</a></li>
     </ul>
   </div>
+  
+  <div class="col-md-6">
+    <h3>Web scraping with Python</h3>
+    <ul>
+      <li>Goals and approach</li>
+      <li>Preliminary questions</li>
+      <li>Example project overview and goals</li>
+      <li>Take shortcuts if you can</li>
+      <li>Parse html if you have to</li>
+      <li>Use Scrapy for large or complicated projects</li>
+      <li>Use a browser driver as a last resort</li>
+      <li><a href="http://tutorials.iq.harvard.edu/Python/PythonWebScrape.zip">Source materials</a> 
+           and <a href="http://tutorials.iq.harvard.edu/Python/PythonWebScrape/PythonWebScrape.html">lesson notes</a></li>
+    </ul>
+  </div>
+<div class="col-md-6">
+    <h3>Follow-on discussions OR Version Control with Git/GitKraken</h3>
+    <ul>
+      <li>Background and introduction: What and why?</li>
+      <li>Starting with the GitKraken GUI</li>
+      <li>Creating a repository or cloning</li>
+      <li>Staging and committing changes</li>
+      <li>Making changes and committing changes</li>
+      <li>Pushing to a remote repository</li>
+      <li>(Remote) repositories online</li>
+      <li>Making changes remotely</li>
+      <li>Managing merge conflicts</li>
+      <li><a href="https://support.gitkraken.com/getting-started/guide">GitKraken guide</a>; 
+        <a href="https://help.github.com/articles/github-glossary/">Git glossary</a>; 
+        <a href="https://guides.github.com/">GitHub guide</a></li>
+    </ul>
+  </div>
+
   <!--
   <div class="col-md-6">
     <h3 id="syllabus-r">Programming in R</h3>
