--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -40,7 +40,7 @@
     </ul>
   </div>
 <div class="col-md-6">
-    <h3>Follow-on discussions OR Version Control with Git/GitKraken</h3>
+    <h3>Version Control with Git/GitKraken</h3>
     <ul>
       <li>Background and introduction: What and why?</li>
       <li>Starting with the GitKraken GUI</li>
