--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -3,10 +3,10 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>08:30</td>  <td>Continental Breakfast</td> </tr>
-      <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io/shell-novice">Automating tasks with the Unix shell</a></td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with Python</td> </tr>
+      <tr> <td>13:00</td>  <td><a href="http://swcarpentry.github.io/python-novice-inflammation">Building programs with Python</a></td> </tr>
       <tr> <td>14:30</td>  <td>Coffee</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>
@@ -16,10 +16,10 @@
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>08:30</td>  <td>Continental Breakfast</td> </tr>
-      <tr> <td>09:00</td>  <td>Web scraping with Python</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="http://tutorials.iq.harvard.edu/Python/PythonWebScrape/PythonWebScrape.html">Web scraping with Python</a></td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Follow-up OR Version Control with Git/GitKraken</td> </tr>
+      <tr> <td>13:00</td>  <td>Follow-up OR <a href="https://github.com/hbs-rcs/versioning_data_scripts/">Version Control with Git/GitKraken</a></td> </tr>
       <tr> <td>14:30</td>  <td>Coffee</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
